# cc0

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README  README.md  cod.sync.files  libi0
Bugs/: README.txt  break.c  char2long-cast.c  fun-call-return.c  stack_array.c  stack_var_addr.c  struct-compact.c  struct.c
Bugs/Closed/: char2long-cast.c  fun-call-return.c  malloc.c
Bugs/Open/: struct.c
backend/disa/: DisaAssemblyParser.cpp  DisaAssemblyParser.h  DisaCodeGenerator.cpp
backend/i0/: I0.g  I0AssemblyParser.h  I0CodeGenerator.cpp  I0Instruction.h
binary/: CMakeLists.txt
binary/elf/: ElfFileWriter.cpp  ElfFileWriter.h
binary/flat/: CMakeLists.txt  FlatFileWriter.cpp
cmake.d/Modules/: FindAntlr3.cmake
core/Analysis/: DefInfo.h  UseInfo.cpp
core/Binary/: BinaryWriter.h
core/CodeDom/: ArraySegmentExpression.h  AssignExpression.cpp  BinaryExpression.cpp  BinaryExpression.h  BlockExpression.h  CallExpression.h  CommitExpression.h  ConditionalExpression.cpp  ConstantExpression.cpp  ConstantExpression.h  ConvertExpression.cpp  Expression.cpp  Expression.h  ExpressionTreeDumper.h  ExpressionVisitor.h  FunctionExpression.cpp  FunctionExpression.h  GotoExpression.cpp  IndexExpression.cpp  NewRunnerExpression.cpp  ReturnExpression.cpp  VariableExpression.cpp
core/IL/: IL.cpp  IL.h  ILClass.h  ILFunction.cpp  ILFunction.h  ILProgram.h  ILVisitor.h
core/Misc/: CompilationContext.cpp  Location.cpp  Location.h
core/Pass/: AssemblyParser.cpp  ILGenerator.cpp  ILOptimizer.cpp  ILOptimizer.h  SourceParser.cpp  TargetOptimizer.h  TypeDeduction.h
core/Symbol/: Declaration.cpp  (+7 more)
frontend/c/: C.g  CMakeLists.txt  DeclarationTemplate.cpp
libi0/: malloc.h  sio.h  stddef.h  stdint.h  stdio.h  string.h  time.h  unistd.h
src/: Makefile  README  build-cc0.sh  distribute-to.sh  install_cc0.sh  install_cc0_build_env.sh  pull-build-cc0.sh  update_cl1_src.sh
src/toolchain/: CMakeLists.txt
src/toolchain/Bugs/: inline-assembly-br-target.c  malloc.c  sample.c  struct.c.rej
src/toolchain/Bugs/Closed/: break.c  inline-assembly-br-target.c  stack_var_addr.c
src/toolchain/Bugs/Fixed/: stack_array.c
src/toolchain/Bugs/Invalid/: sample.c
src/toolchain/backend/: CMakeLists.txt
src/toolchain/backend/disa/: CMakeLists.txt  Disa.g  DisaCodeGenerator.h  DisaInstruction.cpp  DisaInstruction.h
src/toolchain/backend/i0/: CMakeLists.txt  I0.g  I0AssemblyParser.cpp  I0CodeGenerator.cpp  I0CodeGenerator.h  I0Instruction.cpp  I0Instruction.h
src/toolchain/binary/elf/: CMakeLists.txt
src/toolchain/binary/flat/: FlatFileWriter.h
src/toolchain/cmake.d/Modules/: FindAntlr3.cmake  FindBoehmGC.cmake
src/toolchain/core/: CMakeLists.txt  Core.h
src/toolchain/core/Analysis/: BasicBlock.cpp  BasicBlock.h  DefInfo.cpp  UseInfo.h
src/toolchain/core/Binary/: BinaryWriter.cpp  SectionInfo.cpp  SectionInfo.h
src/toolchain/core/CodeDom/: AbortExpression.cpp  AbortExpression.h  ArraySegmentExpression.cpp  ArraySegmentExpression.h  AssignExpression.cpp  AssignExpression.h  BinaryExpression.cpp  BinaryExpression.h  BlockExpression.cpp  BlockExpression.h  CallExpression.cpp  CallExpression.h  CommitExpression.cpp  CommitExpression.h  ConditionalExpression.cpp  ConditionalExpression.h  ConstantExpression.cpp  ConstantExpression.h  ConvertExpression.cpp  ConvertExpression.h  Expression.cpp  Expression.h  ExpressionTreeDumper.cpp  ExpressionVisitor.cpp  FunctionExpression.cpp  FunctionExpression.h  GotoExpression.cpp  GotoExpression.h  IndexExpression.cpp  IndexExpression.h  InlineAssemblyExpression.cpp  InlineAssemblyExpression.h  LabelExpression.cpp  LabelExpression.h  LoopExpression.cpp  LoopExpression.h  MemberExpression.cpp  MemberExpression.h  NewRunnerExpression.cpp  NewRunnerExpression.h  (+9 more)
src/toolchain/core/IL/: IL.cpp  IL.h  ILClass.cpp  ILClass.h  ILFunction.cpp  ILFunction.h  ILProgram.cpp  ILProgram.h  ILVisitor.cpp
src/toolchain/core/Misc/: CompilationContext.cpp  CompilationContext.h  ConstantValue.cpp  ConstantValue.h  FilePath.cpp  FilePath.h  Location.h  TagContainer.cpp  TagContainer.h  Utils.h
src/toolchain/core/Pass/: AssemblyParser.h  CodeGenerator.cpp  CodeGenerator.h  ConstantPropagation.cpp  ConstantPropagation.h  ILGenerator.cpp  ILGenerator.h  ILOptimizer.cpp  SourceParser.h  TargetOptimizer.cpp  TypeDeduction.cpp
src/toolchain/core/Serialization/: Archives.h  ExportDeriveExpressions.h  ExportDeriveTypes.h  ObjFormat.h
src/toolchain/core/Symbol/: Declaration.cpp  Declaration.h  Symbol.cpp  Symbol.h  SymbolAddress.cpp  SymbolRef.cpp  SymbolRef.h  SymbolScope.cpp  SymbolScope.h
src/toolchain/core/Type/: ArrayType.cpp  ArrayType.h  BooleanType.h  FloatingPointType.cpp  FloatingPointType.h  FunctionType.cpp  FunctionType.h  IntegerType.cpp  IntegerType.h  LabelType.h  PointerType.cpp  PointerType.h  StructType.cpp  StructType.h  Type.cpp  Type.h  VoidType.cpp  VoidType.h
src/toolchain/frontend/: CMakeLists.txt
src/toolchain/frontend/c/: CSourceParser.cpp  CSourceParser.h  DeclarationTemplate.cpp  DeclarationTemplate.h
src/toolchain/test/: branch.c  disa_testcase  div2.c  dummy.c  grammar_test.c  inline_asm.c  kmeans.c  lu-zma.c  lu.c  matmul.c  mm_test.c  nn.c  pointer.c  regvar.c  runner-creation  runner_stack_content.c  simple_watcher.c  stdin_stdout.c  switch_case.c  watch-struct-simple.c  watch-struct.c  watcher_test_array_seg.c
src/toolchain/tools/: CMakeLists.txt
src/toolchain/tools/cc0/: CMakeLists.txt  Configuration.cpp  Configuration.h  main.cpp
src/toolchain/tools/ld0/: CMakeLists.txt  main.cpp
test/: Makefile  array.c  assembly.s  bug1.c  disa_micro_bench.c  div.c  double.c  double_add.c  double_add_newr.c  forwarddecl.c  fun-call-char-para.c  fun.c  fun_call.c  fun_call_return.c  inttypes.c  loop.c  matrix-multiplication  mergesort  multi_runner.c  multi_runner2.c  multi_runner3.c  pagerank.c  print.c  quicksort  radixsort  simple_fun.c  snapshot.c  spath.c  srad.c  standalone.c  struct.c  test-array.c  test-char-basic.c  test-char.c  test-compare.c  watch-array-seg.c  watcher_test.c
tools/: CMakeLists.txt
(+115 files in other folders)
